prover-ray/zkcdriver/testdata/synced/invalid/const_02.zkc
//error:3:20-27:arithmetic overflow
const LARGE:u8 = 255
const LARGEPO:u8 = LARGE+1
